--- a/views/index.html
+++ b/views/index.html
@@ -15,6 +15,24 @@
         <a href="/backTop">
             <em class="iconfont icon-tubiao102 backtop"></em>回到顶部
         </a>
+        <a href="/backTop">
+            <em class="iconfont icon-tubiao102 backtop"></em>回到顶部
+        </a>
+        <a href="/backTop">
+            <em class="iconfont icon-tubiao102 backtop"></em>回到顶部
+        </a>
+        <a href="/backTop">
+            <em class="iconfont icon-tubiao102 backtop"></em>回到顶部
+        </a>
+        <a href="/backTop">
+            <em class="iconfont icon-tubiao102 backtop"></em>回到顶部
+        </a>
+        <a href="/backTop">
+            <em class="iconfont icon-tubiao102 backtop"></em>回到顶部
+        </a>
+        <a href="/backTop">
+            <em class="iconfont icon-tubiao102 backtop"></em>回到顶部
+        </a>
     </div>
 </body>
 </html>
