--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,14 +1,21 @@
+.container {
+    display: block;
+    width: 100%;
+}
 .container a {
-    width: 33.3%;
+    width: 33.5%;
     text-align: center;
     color: #666;
     font-size: 14px;
     padding: 20px;
+    border: 1px solid #e4e4e4;
+    border: 1px solid #f2f2f2;
+    cursor: pointer;
+    float: left;
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
-    border: 1px solid #e4e4e4;
-    margin-top: -1px;
-    cursor: pointer;
+    margin-bottom: -1px;
+    margin-right: -1px;
 }
 .title {
     font-size: 24px;
