--- a/static/components/backTop/backTop.css
+++ b/static/components/backTop/backTop.css
@@ -5,7 +5,8 @@
     border: 1px solid #333;
     text-align:center;
     line-height: 40px;
-    position: fixed;bottom: 20px;
+    position: fixed;
+    bottom: 40px;
     right: 20px;
 }
 .icon-backTop{
