feat:编写兼容代码

--- a/views/index.html
+++ b/views/index.html
@@ -15,8 +15,8 @@
         <a href="/backTop">
             <em class="iconfont icon-tubiao102 backtop"></em>回到顶部
         </a>
-        <a href="/backTop">
-            <em class="iconfont icon-tubiao102 backtop"></em>回到顶部
+        <a href="/sliderImage">
+            <em class="iconfont icon-tubiao102 backtop"></em>图片轮播
         </a>
         <a href="/backTop">
             <em class="iconfont icon-tubiao102 backtop"></em>回到顶部
