feat:添加图片轮播组件

--- a/views/index.html
+++ b/views/index.html
@@ -13,25 +13,25 @@
     <h1 class="title">移动端组件集合</h1>
     <div class="container">
         <a href="/backTop">
-            <em class="iconfont icon-tubiao102 backtop"></em>回到顶部
+            回到顶部
         </a>
-        <a href="/sliderImage">
-            <em class="iconfont icon-tubiao102 backtop"></em>图片轮播
-        </a>
-        <a href="/backTop">
-            <em class="iconfont icon-tubiao102 backtop"></em>回到顶部
+        <a href="/slider">
+            图片轮播
         </a>
         <a href="/backTop">
-            <em class="iconfont icon-tubiao102 backtop"></em>回到顶部
+            回到顶部
         </a>
         <a href="/backTop">
-            <em class="iconfont icon-tubiao102 backtop"></em>回到顶部
+            回到顶部
         </a>
         <a href="/backTop">
-            <em class="iconfont icon-tubiao102 backtop"></em>回到顶部
+            回到顶部
         </a>
         <a href="/backTop">
-            <em class="iconfont icon-tubiao102 backtop"></em>回到顶部
+            回到顶部
+        </a>
+        <a href="/backTop">
+            回到顶部
         </a>
     </div>
 </body>
