--- a/views/slider.html
+++ b/views/slider.html
@@ -18,33 +18,37 @@
             <img src="public/image/slider1.jpg" class="slider-image" alt="">
         </li>
         <li class="slider-li">
-            <img src="public/image/slider2.jpg" class="slider-image" alt="">
+            <img _src="public/image/slider2.jpg" class="slider-image" alt="">
         </li>
         <li class="slider-li">
-            <img src="public/image/slider3.jpg" class="slider-image" alt="">
+            <img _src="public/image/slider3.jpg" class="slider-image" alt="">
         </li>
         <li class="slider-li">
-            <img src="public/image/slider4.jpg" class="slider-image" alt="">
+            <img _src="public/image/slider4.jpg" class="slider-image" alt="">
         </li>
         <li class="slider-li">
-            <img src="public/image/slider5.jpg" class="slider-image" alt="">
+            <img _src="public/image/slider5.jpg" class="slider-image" alt="">
         </li>
         <li class="slider-li">
-            <img src="public/image/slider6.jpg" class="slider-image" alt="">
+            <img _src="public/image/slider6.jpg" class="slider-image" alt="">
         </li>
         <li class="slider-li">
-            <img src="public/image/slider7.jpg" class="slider-image" alt="">
+            <img _src="public/image/slider7.jpg" class="slider-image" alt="">
         </li>
         <li class="slider-li">
-            <img src="public/image/slider8.jpg" class="slider-image" alt="">
+            <img _src="public/image/slider8.jpg" class="slider-image" alt="">
         </li>
     </ul>
+
 </div>
 
 <script>
 var slider = document.getElementById('slider');
 Slider(slider , {
-
+    platform : 'mobile',   // mobile or pc
+    lazy : true,
+    dot : true,
+    autoPlay : true
 });
 </script>
 
