feat:添加图片轮播组件

--- a/views/slider.html
+++ b/views/slider.html
@@ -48,7 +48,7 @@ Slider(slider , {
     platform : 'mobile',   // mobile or pc
     lazy : true,
     dot : true,
-    autoPlay : true
+    autoPlay : false
 });
 </script>
 
