feat:添加图片轮播组件PC版

--- a/views/index.html
+++ b/views/index.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>移动端组件集合</title>
+    <title>前端组件集合</title>
     <link rel="stylesheet" href="public/css/reset.css">
     <link rel="stylesheet" href="public/css/index.css">
     <link rel="stylesheet" href="public/css/font.css">
 </head>
 <body>
-    <h1 class="title">移动端组件集合</h1>
+    <h1 class="title">前端组件集合</h1>
     <div class="container">
         <a href="/backTop">
             回到顶部
         </a>
         <a href="/slider">
-            图片轮播
+            图片轮播(移动版)
         </a>
-        <a href="/backTop">
-            回到顶部
+        <a href="/carousel">
+            图片轮播(桌面版)
         </a>
         <a href="/backTop">
             回到顶部
