--- a/views/carousel.html
+++ b/views/carousel.html
@@ -19,19 +19,19 @@
             <img src="public/image/slider2.jpg" class="carousel-image" alt="">
         </li>
         <li class="carousel-li">
-            <img _src="public/image/slider3.jpg" class="carousel-image" alt="">
+            <img src="public/image/slider3.jpg" class="carousel-image" alt="">
         </li>
         <li class="carousel-li">
-            <img _src="public/image/slider4.jpg" class="carousel-image" alt="">
+            <img src="public/image/slider4.jpg" class="carousel-image" alt="">
         </li>
         <li class="carousel-li">
-            <img _src="public/image/slider5.jpg" class="carousel-image" alt="">
+            <img src="public/image/slider5.jpg" class="carousel-image" alt="">
         </li>
         <li class="carousel-li">
-            <img _src="public/image/slider6.jpg" class="carousel-image" alt="">
+            <img src="public/image/slider6.jpg" class="carousel-image" alt="">
         </li>
         <li class="carousel-li">
-            <img _src="public/image/slider7.jpg" class="carousel-image" alt="">
+            <img src="public/image/slider7.jpg" class="carousel-image" alt="">
         </li>
         <li class="carousel-li">
             <img src="public/image/slider8.jpg" class="carousel-image" alt="">
@@ -43,7 +43,9 @@ var carousel = document.getElementById('carousel');
 new Carousel(carousel , {
     lazy : true,
     dot : true,
-    time : 25
+    time : 20,
+    animate : true,
+    loop : true
 });
 </script>
 </body>
