feat:添加选择地区组件

--- a/views/index.html
+++ b/views/index.html
@@ -21,8 +21,8 @@
         <a href="/carousel">
             图片轮播(桌面版)
         </a>
-        <a href="/backTop">
-            回到顶部
+        <a href="/select">
+            选择地区
         </a>
         <a href="/backTop">
             回到顶部
