feat:添加选择地区组件

--- a/views/carousel.html
+++ b/views/carousel.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>轮播图组件</title>
+    <title>轮播图组件PC版</title>
     <link rel="stylesheet" href="public/css/reset.css">
     <link rel="stylesheet" href="public/components/carousel/carousel.css">
     <script src="public/util/util.js"></script>
