--- a/views/index.html
+++ b/views/index.html
@@ -12,7 +12,7 @@
 <body>
     <h1 class="title">前端组件集合</h1>
     <div class="container">
-        <a href="/backTop">
+        <a href="/backtop">
             回到顶部
         </a>
         <a href="/slider">
