--- a/views/slider.html
+++ b/views/slider.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>图片轮播</title>
+    <title>图片轮播组件</title>
     <link rel="stylesheet" href="public/css/reset.css">
     <link rel="stylesheet" href="public/css/font.css">
     <link rel="stylesheet" href="public/components/slider/slider.css">
