feat:编写地区选择组件

--- a/views/select.html
+++ b/views/select.html
@@ -15,7 +15,10 @@
 
 <h3 style="text-align: center;padding: 20px;">地区选择组件</h3>
 <div id="select" style="padding: 30px;">
-    <select name="province">
+    <select name="province" id="province">
+        <option>- 请选择 -</option>
+    </select>
+    <select name="city" id="city">
         <option>- 请选择 -</option>
     </select>
 </div>
