feat:解析地区数据

--- a/views/select.html
+++ b/views/select.html
@@ -26,7 +26,10 @@
 <script>
 var select = document.getElementById('select');
 Select(select , {
-    dataUrl : './public/components/select/area.json'
+    dataUrl : './public/components/select/area.json',
+    province : '湖南',
+    city : '怀化',
+    area : '麻阳'
 });
 
 </script>
