feat:完成地区选择组件PC版

--- a/views/index.html
+++ b/views/index.html
@@ -13,16 +13,16 @@
     <h1 class="title">前端组件集合</h1>
     <div class="container">
         <a href="/backtop">
-            回到顶部
+            回到顶部组件(移动+PC)
         </a>
         <a href="/slider">
             图片轮播(移动版)
         </a>
         <a href="/carousel">
-            图片轮播(桌面版)
+            图片轮播(PC版)
         </a>
         <a href="/select">
-            选择地区
+            选择地区组件(PC版)
         </a>
         <a href="/backTop">
             回到顶部
