--- a/static/components/select/select.css
+++ b/static/components/select/select.css
@@ -16,6 +16,7 @@ li.select-current {
     padding: 10px;
     width: 380px;
     border: 1px solid #ddd;
+    background-color: #fff;
 }
 .select-overflow {
     overflow: hidden;
