--- a/views/index.html
+++ b/views/index.html
@@ -24,8 +24,8 @@
         <a href="/select">
             选择地区组件(PC版)
         </a>
-        <a href="/backTop">
-            回到顶部
+        <a href="/fullpage">
+            全屏轮动组件
         </a>
         <a href="/backTop">
             回到顶部
