--- a/views/fullpage.html
+++ b/views/fullpage.html
@@ -4,11 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>全屏滚动组件(PC版)</title>
+    <link rel="stylesheet" href="public/css/reset.css">
+    <link rel="stylesheet" href="public/components/fullpage/fullpage.css">
+    <script src="public/util/util.js"></script>
+    <script src="public/components/fullpage/fullpage.js"></script>
 </head>
 <body>
 <div id="fullpage">
-    
+    <div class="section section1">1</div>
+    <div class="section section2">2</div>
+    <div class="section section3">3</div>
+    <div class="section section4">4</div>
 </div>
-
+<script>
+    var fullpage = document.getElementById('fullpage');
+    Fullpage(fullpage , {
+        easing : 'ease',        // 过渡动画效果
+        loop : false,
+        seamless : false,
+        dot : true
+    })
+</script>
 </body>
 </html>
