--- a/views/fullpage.html
+++ b/views/fullpage.html
@@ -20,7 +20,7 @@
     var fullpage = document.getElementById('fullpage');
     Fullpage(fullpage , {
         easing : 'ease',        // 过渡动画效果
-        loop : false,
+        loop : true,
         seamless : false,
         dot : true
     })
