--- a/views/fullpage.html
+++ b/views/fullpage.html
@@ -21,7 +21,7 @@
     Fullpage(fullpage , {
         easing : 'ease',        // 过渡动画效果
         loop : true,
-        seamless : false,
+        seamless : true,
         dot : true
     })
 </script>
