--- a/views/index.html
+++ b/views/index.html
@@ -25,10 +25,10 @@
             选择地区组件(PC版)
         </a>
         <a href="/fullpage">
-            全屏轮动组件
+            全屏轮动组件(PC版)
         </a>
-        <a href="/backTop">
-            回到顶部
+        <a href="/lazyload">
+            图片懒加载组件
         </a>
         <a href="/backTop">
             回到顶部
