feat:添加图片懒加载js

--- a/static/components/lazyload/lazyload.css
+++ b/static/components/lazyload/lazyload.css
@@ -1,6 +1,3 @@
-.img1{
-    background: url(../../image/slider1.jpg) no-repeat center center;
-    height: 400px;
-    width: 400px;
-    background-size: contain;
+.img-loaded{
+    
 }
