--- a/views/lazyload.html
+++ b/views/lazyload.html
@@ -13,24 +13,26 @@
 </head>
 <body>
     <div id="container">
-        <div style="width: 400px;height: 400px;"><img _src="public/image/1.jpg" style="width:400px;height:100%;" alt=""></div>
-        <div style="width: 400px;height: 400px;"><img _src="public/image/2.jpg" style="width:400px;height:100%;" alt=""></div>
-        <div style="width: 400px;height: 400px;"><img _src="public/image/3.jpg" style="width:400px;height:100%;" alt=""></div>
-        <div style="width: 400px;height: 400px;"><img _src="public/image/4.jpg" style="width:400px;height:100%;" alt=""></div>
-        <div style="width: 400px;height: 400px;"><img _src="public/image/5.jpg" style="width:400px;height:100%;" alt=""></div>
-        <div style="width: 400px;height: 400px;"><img _src="public/image/6.jpg" style="width:400px;height:100%;" alt=""></div>
-        <div style="width: 400px;height: 400px;"><img _src="public/image/7.jpg" style="width:400px;height:100%;" alt=""></div>
-        <div style="width: 400px;height: 400px;"><img _src="public/image/8.jpg" style="width:400px;height:100%;" alt=""></div>
-        <div style="width: 400px;height: 400px;"><img _src="public/image/9.jpg" style="width:400px;height:100%;" alt=""></div>
-        <div style="width: 400px;height: 400px;"><img _src="public/image/10.jpg" style="width:400px;height:100%;" alt=""></div>
+        <div style="width: 400px;height: 400px;"><img _src="public/image/1.jpg" style="width:100%;height:100%;" alt=""></div>
+        <div style="width: 400px;height: 400px;"><img _src="public/image/2.jpg" style="width:100%;height:100%;" alt=""></div>
+        <div style="width: 400px;height: 400px;"><img _src="public/image/3.jpg" style="width:100%;height:100%;" alt=""></div>
+        <div style="width: 400px;height: 400px;"><img _src="public/image/4.jpg" style="width:100%;height:100%;" alt=""></div>
+        <div style="width: 400px;height: 400px;"><img _src="public/image/5.jpg" style="width:100%;height:100%;" alt=""></div>
+        <div style="width: 400px;height: 400px;"><img _src="public/image/6.jpg" style="width:100%;height:100%;" alt=""></div>
+        <div style="width: 400px;height: 400px;"><img _src="public/image/7.jpg" style="width:100%;height:100%;" alt=""></div>
+        <div style="width: 400px;height: 400px;"><img _src="public/image/8.jpg" style="width:100%;height:100%;" alt=""></div>
+        <div style="width: 400px;height: 400px;"><img _src="public/image/9.jpg" style="width:100%;height:100%;" alt=""></div>
+        <div style="width: 400px;height: 400px;"><img _src="public/image/10.jpg" style="width:100%;height:100%;" alt=""></div>
     </div>
-    <div style="height: 700px;"></div>
     <button id="btn" style="position: fixed;top: 50%;right: 40px;">加载更多图片</button>
 </body>
 <script>
     var container = document.getElementById('container');
     var lazy = Lazyload(container , {
-        animate : true
+        throttleTime : 100,
+        complete : function () {
+            console.log('图片加载完成');
+        }
     });
     var btn = document.getElementById('btn');
     btn.addEventListener('click' , function () {
