feat:完成日期选择组件

--- a/views/datepicker.html
+++ b/views/datepicker.html
@@ -52,10 +52,13 @@
 <script>
     var datepicker = document.getElementById('datepicker');
     Datepicker(datepicker , {
-        top : '',
-        left : '',
+        top : 100,
+        left : 40,
         format : 'YYYY:MM:DD',
-        joiner : '-'
+        joiner : '-',
+        onChange : function () {
+            console.log(this.currentDate)
+        }
     });
 </script>
 </body>
