feat:修改日期选择组件文档

--- a/views/index.html
+++ b/views/index.html
@@ -28,10 +28,10 @@
             全屏轮动组件(PC版)
         </a>
         <a href="/lazyload">
-            图片懒加载组件
+            图片懒加载组件(PC+移动)
         </a>
         <a href="/datepicker">
-            日期选择组件
+            日期选择组件(PC版)
         </a>
     </div>
 </body>
