feat:添加图片上传组件

--- a/views/index.html
+++ b/views/index.html
@@ -33,6 +33,9 @@
         <a href="/datepicker">
             日期选择组件(PC版)
         </a>
+        <a href="/upload">
+            图片上传组件
+        </a>
     </div>
 </body>
 </html>
